                FROM turq_inventory_transactions
               WHERE turq_inventory_transactions.transactions_total_amount_out <> 0
               GROUP BY turq_inventory_transactions.inventory_cards_id) transout ON trans.inventory_cards_id = transout.inventory_cards_id;




CREATE OR REPLACE VIEW turq_view_inventory_amount_total AS 
 SELECT cards.inventory_cards_id, tabletrans.transactions_amount_in, tabletrans.transactions_total_amount_out, tabletrans.transactions_total_amount_now
   FROM turq_inventory_cards cards
   LEFT JOIN ( SELECT trans.inventory_cards_id, sum(trans.transactions_amount_in) AS transactions_amount_in, sum(trans.transactions_total_amount_out) AS transactions_total_amount_out, sum(trans.transactions_amount_in - trans.transactions_total_amount_out) AS transactions_total_amount_now
                FROM turq_inventory_transactions trans
               GROUP BY trans.inventory_cards_id) tabletrans ON tabletrans.inventory_cards_id = cards.inventory_cards_id;



*** 06-02-2005 **** 

-- "turq_inventory_groups" ---> "parent_group" (integer) column added
-- Foreign key from "parent_group" to "inventory_groups_id" in "turq_inventory_groups"

----Process---

ALTER TABLE turq_inventory_groups ADD COLUMN parent_group int4;

INSERT INTO turq_inventory_groups VALUES (-1, 'Varsayilan', 'Varsayilan', 'admin', '2005-01-14', 'admin', '2005-01-14', -1);

update turq_inventory_groups set parent_group =-1

ALTER TABLE turq_inventory_groups
   ALTER COLUMN parent_group SET NOT NULL;
   
ALTER TABLE turq_inventory_groups ADD CONSTRAINT ig1 FOREIGN KEY (parent_group) REFERENCES turq_inventory_groups (inventory_groups_id)    ON UPDATE RESTRICT ON DELETE RESTRICT;
   
INSERT INTO turq_inventory_groups VALUES (-1, 'Varsayilan', 'Varsayilan', 'admin', '2005-01-14', 'admin', '2005-01-14', -1);



**** 09-02-2005 *****
--- "turq_banks_transactions"  ----> "accounting_accounts_id" removed... 
   