@@ -121,6 +121,12 @@
         not-null="true"
         length="4"
     />
+    <property
+        name="bankAccountNo"
+        type="java.lang.String"
+        column="bank_account_no"
+        length="100"
+    />
 
     <!-- Associations -->
   
